# EF

./: .clang-format  .clang-tidy  .doxygen  .gitignore  CMakeLists.txt  INSTALL  Makefile  README  README.asciidoc  ef.tar.gpg  ef.txt.gpg
doc/: CMakeLists.txt  Makefile  ef.asciidoc  ef.txt
doc/tutorial/: tutorial1.ef  tutorial2.ef  tutorial3.ef  tutorial4.ef  tutorial5.ef  tutorial6.ef
ide/qtcreator/: EF.files
src/IDE-support/Emacs/: ef-mode.el
src/efc/: CMakeLists.txt  Makefile  README.txt  access.h  ast.cpp  ast.h  astdefaultiterator.cpp  astdefaultiterator.h  astforwards.h  astprinter.cpp  astprinter.h  astvisitor.h  declutils.h  driver.cpp  driver.h  ef.l  ef.yy  efc.cpp  efc.h  entity.cpp  entity.h  env.cpp  env.h  envinserter.cpp  envinserter.h  envnode.cpp  envnode.h  errorhandler.cpp  errorhandler.h  executionengineadapter.cpp  executionengineadapter.h  fqnameprovider.h  freefromastobject.cpp  freefromastobject.h  generalvalue.h  genparser.yy  genparserext.cpp  genparserext.h  genscanner.l  irbuilderast.cpp  (+51 more)
src/efc/test/: astprintertest.cpp  asttest.cpp  driverontmpfile.h  driversystemtest.cpp  efctest.cpp  efctest.h  envtest.cpp  errorhandlertest.cpp  gtestprinter.cpp  gtestprinter.h  irbuilderasttest.cpp  irgentest.cpp  objtypetest.cpp  parserexttest.cpp  scannerandparsertest.cpp  scannertest.cpp  semanticanalizertest.cpp  test.cpp  test.h  tutorialstest.cpp
src/efc/test/googletest/googletest/src/: gtest.cc
src/efc/test/testhelpers/: driverontmpfile.h  literaltokenstream.cpp  literaltokenstream.h  tokentesthelper.cpp  tokentesthelper.h
src/efc/test/tests/: astprintertest.cpp  asttest.cpp  driversystemtest.cpp  envtest.cpp  errorhandlertest.cpp  genparserexttest.cpp  irgentest.cpp  objecttest.cpp  objtype2test.cpp  objtypetest.cpp  parserexttest.cpp  scannerandparsertest.cpp  scannertest.cpp  semanticanalizertest.cpp  tokenfiltertest.cpp  tokenstreamlookaheadtest.cpp  tutorialstest.cpp
src/efc/test/tests/testhelpers/: literaltokenstreamtest.cpp
